# WannSymm

./: .gitignore  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  LINE46_FIX_SUMMARY.md  LINE46_INVESTIGATION.md  MAGNETIC_SYMMETRY_FIX.md  MATRIX_INDEXING_FIX_SUMMARY.md  ORBITAL_ANGULAR_MOMENTUM_FIX.md  PYTHON_TRANSLATION_ANALYSIS.md  PYTHON_TRANSLATION_GETTING_STARTED.md  READINPUT_IMPLEMENTATION_SUMMARY.md  SAXIS_FIX_SUMMARY.md  TESTING_GUIDE.md  TEST_SUMMARY.md  TRANSLATION_STATISTICS.md  TRANSLATION_SUMMARY.txt
examples/mnf2/input/: wannier90.up.in
examples/mnf2/output/: POSCAR  wannier90.dn.in
python_wannsymm/: .gitignore  E2E_TEST_REPORT.md  FINAL_E2E_SUMMARY.md  MAIN_IMPLEMENTATION.md  README.md  SYMMETRIZATION_COMPLETE.md  SYMMETRIZATION_CORE_IMPLEMENTATION.md  pyproject.toml  requirements.txt  setup.cfg  validate_symmetrization.py
python_wannsymm/docs/: DEPENDENCY_GRAPH.md  QUICKSTART.md  TRANSLATION_WORKFLOW.md
python_wannsymm/tests/: __init__.py  test_bndstruct.py  test_constants.py  test_integration.py  test_line46_issue.py  test_magmom_fix.py  test_matrix.py  test_matrix_indexing_fix.py  test_mnf2_e2e.py  test_readinput.py  test_readsymm.py  test_rotate_basis.py  test_rotate_ham.py  test_rotate_orbital.py  test_rotate_spinor.py  test_saxis_comprehensive.py  test_saxis_transformation.py  test_usefulio.py  test_vector.py  test_wanndata.py  test_wannorb.py
python_wannsymm/wannsymm/: BNDSTRUCT_README.md  __init__.py  bndstruct.py  constants.py  main.py  matrix.py  readinput.py  readsymm.py  rotate_basis.py  rotate_ham.py  rotate_orbital.py  rotate_spinor.py  usefulio.py  vector.py  wanndata.py  wannorb.py
src/: readinput.c  rotate_ham.c
tests/: Makefile  README.md  mkl.h  mkl_compat.h  spglib.h  test_matrix.c  test_usefulio.c  test_vector.c
