[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "wannsymm"
version = "0.1.0-alpha"
description = "Python implementation of WannSymm - A symmetry analysis code for Wannier orbitals"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Chao Cao", email = "ccao@zju.edu.cn"},
    {name = "Guo-Xiang Zhi", email = "guoxiang.zhi@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.18.0",
    "scipy>=1.5.0",
    "spglib>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
parallel = [
    "mpi4py>=3.0.0",
]
io = [
    "ase>=3.20.0",  # For POSCAR reading
]
performance = [
    "numba>=0.50.0",  # JIT compilation
]

[project.scripts]
wannsymm = "wannsymm.main:main"

[project.urls]
Homepage = "https://github.com/Connor1y/WannSymm"
Documentation = "https://github.com/Connor1y/WannSymm/blob/main/README.md"
Repository = "https://github.com/Connor1y/WannSymm"
"Bug Tracker" = "https://github.com/Connor1y/WannSymm/issues"

[tool.setuptools]
packages = ["wannsymm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
